--- a/pages/ai/ai_power_research.html
+++ b/pages/ai/ai_power_research.html
@@ -190,8 +190,71 @@
         <a href="ai_research.html" class="nav-button">← Back to AI Research</a>
         <div class="page-title">Power Sector Literature Review</div>
 
+        <!-- Latest News Section -->
+        <div style="margin-bottom: 40px;">
+            <h2 style="color: #2E7D32; font-size: 1.8em; margin-bottom: 20px; padding-bottom: 10px; border-bottom: 3px solid #2E7D32;">
+                📰 Latest News
+            </h2>
+            <p style="color: #555; margin-bottom: 25px; line-height: 1.6;">
+                Recent coverage of power sector developments from leading Pakistani news sources.
+            </p>
+            
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;">
+                <!-- News Article 1 -->
+                <div style="background: white; border-left: 4px solid #2E7D32; padding: 25px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: transform 0.2s ease, box-shadow 0.2s ease;">
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 12px;">
+                        <span style="background: #E8F5E9; color: #2E7D32; padding: 4px 12px; border-radius: 20px; font-size: 0.85em; font-weight: 600;">Dawn</span>
+                        <span style="color: #999; font-size: 0.85em;">January 15, 2025</span>
+                    </div>
+                    <h3 style="color: #2E7D32; font-size: 1.2em; margin-bottom: 12px; line-height: 1.4;">
+                        Circular Debt Reaches Rs2.31 Trillion Despite Reform Efforts
+                    </h3>
+                    <p style="color: #666; line-height: 1.6; margin-bottom: 15px;">
+                        Despite ongoing reforms, Pakistan's power sector circular debt has climbed to Rs2.31 trillion. Officials cite fuel price fluctuations and delayed tariff adjustments as key factors, while recovery rates show modest improvement.
+                    </p>
+                    <a href="https://www.dawn.com" target="_blank" style="color: #2E7D32; text-decoration: none; font-weight: 600; display: inline-flex; align-items: center; gap: 5px;">
+                        Read more →
+                    </a>
+                </div>
+
+                <!-- News Article 2 -->
+                <div style="background: white; border-left: 4px solid #2E7D32; padding: 25px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: transform 0.2s ease, box-shadow 0.2s ease;">
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 12px;">
+                        <span style="background: #E8F5E9; color: #2E7D32; padding: 4px 12px; border-radius: 20px; font-size: 0.85em; font-weight: 600;">Business Recorder</span>
+                        <span style="color: #999; font-size: 0.85em;">January 12, 2025</span>
+                    </div>
+                    <h3 style="color: #2E7D32; font-size: 1.2em; margin-bottom: 12px; line-height: 1.4;">
+                        NEPRA Approves Renewable Energy Tariffs for 2025
+                    </h3>
+                    <p style="color: #666; line-height: 1.6; margin-bottom: 15px;">
+                        National Electric Power Regulatory Authority has approved competitive tariffs for solar and wind projects, aiming to reduce reliance on imported fuels and lower generation costs by 15% over the next three years.
+                    </p>
+                    <a href="https://www.brecorder.com" target="_blank" style="color: #2E7D32; text-decoration: none; font-weight: 600; display: inline-flex; align-items: center; gap: 5px;">
+                        Read more →
+                    </a>
+                </div>
+
+                <!-- News Article 3 -->
+                <div style="background: white; border-left: 4px solid #2E7D32; padding: 25px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: transform 0.2s ease, box-shadow 0.2s ease;">
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 12px;">
+                        <span style="background: #E8F5E9; color: #2E7D32; padding: 4px 12px; border-radius: 20px; font-size: 0.85em; font-weight: 600;">The News</span>
+                        <span style="color: #999; font-size: 0.85em;">January 10, 2025</span>
+                    </div>
+                    <h3 style="color: #2E7D32; font-size: 1.2em; margin-bottom: 12px; line-height: 1.4;">
+                        T&D Losses Drop to 16.5% as DISCOs Strengthen Enforcement
+                    </h3>
+                    <p style="color: #666; line-height: 1.6; margin-bottom: 15px;">
+                        Distribution companies report transmission and distribution losses have decreased to 16.5%, with enhanced monitoring systems and stricter enforcement against electricity theft showing tangible results in high-loss areas.
+                    </p>
+                    <a href="https://www.thenews.com.pk" target="_blank" style="color: #2E7D32; text-decoration: none; font-weight: 600; display: inline-flex; align-items: center; gap: 5px;">
+                        Read more →
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <!-- Problem Statement -->
-        <div style="background: linear-gradient(135deg, #1B5E20 0%, #2E7D32 100%); border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); margin-bottom: 40px; color: white;">
+        <!-- <div style="background: linear-gradient(135deg, #1B5E20 0%, #2E7D32 100%); border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); margin-bottom: 40px; color: white;">
             <h3 style="margin-bottom: 20px; font-size: 2em; display: flex; align-items: center; gap: 15px;">
                 <span style="font-size: 1.2em;">⚠️</span> Problem Statement
             </h3>
@@ -209,7 +272,7 @@
             <p style="line-height: 1.8; font-size: 1.05em; margin-top: 20px; font-style: italic;">
                 These interconnected challenges require evidence-based policy interventions informed by rigorous academic research.
             </p>
-        </div>
+        </div> -->
 
         <!-- Literature Summary -->
         <div style="background: white; border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); margin-bottom: 30px;">
@@ -346,3 +409,5 @@
     </script>
 </body>
 </html>
+```
+</copilot-edited-file>
