--- a/pages/ai/ai_tax_research.html
+++ b/pages/ai/ai_tax_research.html
@@ -185,8 +185,71 @@
         <a href="ai_research.html" class="nav-button">← Back to AI Research</a>
         <div class="page-title">Tax Sector Literature Review</div>
 
+        <!-- Latest News Section -->
+        <div style="margin-bottom: 40px;">
+            <h2 style="color: #2E7D32; font-size: 1.8em; margin-bottom: 20px; padding-bottom: 10px; border-bottom: 3px solid #2E7D32;">
+                📰 Latest News
+            </h2>
+            <p style="color: #555; margin-bottom: 25px; line-height: 1.6;">
+                Recent coverage of tax sector developments from leading Pakistani news sources.
+            </p>
+            
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;">
+                <!-- News Article 1 -->
+                <div style="background: white; border-left: 4px solid #2E7D32; padding: 25px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: transform 0.2s ease, box-shadow 0.2s ease;">
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 12px;">
+                        <span style="background: #E8F5E9; color: #2E7D32; padding: 4px 12px; border-radius: 20px; font-size: 0.85em; font-weight: 600;">Dawn</span>
+                        <span style="color: #999; font-size: 0.85em;">January 16, 2025</span>
+                    </div>
+                    <h3 style="color: #2E7D32; font-size: 1.2em; margin-bottom: 12px; line-height: 1.4;">
+                        FBR Reports Tax-to-GDP Ratio Reaches 8.8%, Still Below Target
+                    </h3>
+                    <p style="color: #666; line-height: 1.6; margin-bottom: 15px;">
+                        Federal Board of Revenue reports tax-to-GDP ratio has improved to 8.8% but remains below the 10% target. Digital reforms and broadened tax base contribute to modest gains, though challenges persist in documentation.
+                    </p>
+                    <a href="https://www.dawn.com" target="_blank" style="color: #2E7D32; text-decoration: none; font-weight: 600; display: inline-flex; align-items: center; gap: 5px;">
+                        Read more →
+                    </a>
+                </div>
+
+                <!-- News Article 2 -->
+                <div style="background: white; border-left: 4px solid #2E7D32; padding: 25px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: transform 0.2s ease, box-shadow 0.2s ease;">
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 12px;">
+                        <span style="background: #E8F5E9; color: #2E7D32; padding: 4px 12px; border-radius: 20px; font-size: 0.85em; font-weight: 600;">Business Recorder</span>
+                        <span style="color: #999; font-size: 0.85em;">January 14, 2025</span>
+                    </div>
+                    <h3 style="color: #2E7D32; font-size: 1.2em; margin-bottom: 12px; line-height: 1.4;">
+                        Active Tax Filers Grow to 4.2 Million as FBR Intensifies Compliance Drive
+                    </h3>
+                    <p style="color: #666; line-height: 1.6; margin-bottom: 15px;">
+                        The number of active income tax return filers has increased to 4.2 million following enhanced compliance measures and simplified e-filing systems. FBR aims to reach 5.5 million filers by year-end through targeted outreach campaigns.
+                    </p>
+                    <a href="https://www.brecorder.com" target="_blank" style="color: #2E7D32; text-decoration: none; font-weight: 600; display: inline-flex; align-items: center; gap: 5px;">
+                        Read more →
+                    </a>
+                </div>
+
+                <!-- News Article 3 -->
+                <div style="background: white; border-left: 4px solid #2E7D32; padding: 25px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: transform 0.2s ease, box-shadow 0.2s ease;">
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 12px;">
+                        <span style="background: #E8F5E9; color: #2E7D32; padding: 4px 12px; border-radius: 20px; font-size: 0.85em; font-weight: 600;">The News</span>
+                        <span style="color: #999; font-size: 0.85em;">January 11, 2025</span>
+                    </div>
+                    <h3 style="color: #2E7D32; font-size: 1.2em; margin-bottom: 12px; line-height: 1.4;">
+                        Government Commits to Reducing Tax Expenditure to Boost Revenue
+                    </h3>
+                    <p style="color: #666; line-height: 1.6; margin-bottom: 15px;">
+                        Finance Ministry announces plans to phase out select tax exemptions and concessions, currently costing 3.8% of GDP. The reforms aim to improve tax equity and generate additional revenue for critical development spending.
+                    </p>
+                    <a href="https://www.thenews.com.pk" target="_blank" style="color: #2E7D32; text-decoration: none; font-weight: 600; display: inline-flex; align-items: center; gap: 5px;">
+                        Read more →
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <!-- Problem Statement -->
-        <div style="background: linear-gradient(135deg, #1B5E20 0%, #2E7D32 100%); border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); margin-bottom: 40px; color: white;">
+        <!-- <div style="background: linear-gradient(135deg, #1B5E20 0%, #2E7D32 100%); border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); margin-bottom: 40px; color: white;">
             <h3 style="margin-bottom: 20px; font-size: 2em; display: flex; align-items: center; gap: 15px;">
                 <span style="font-size: 1.2em;">⚠️</span> Problem Statement
             </h3>
@@ -205,7 +268,7 @@
             <p style="line-height: 1.8; font-size: 1.05em; margin-top: 20px; font-style: italic;">
                 Addressing these structural weaknesses requires understanding their root causes through rigorous academic research.
             </p>
-        </div>
+        </div> -->
 
         <!-- Literature Summary -->
         <div style="background: white; border-radius: 16px; padding: 40px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); margin-bottom: 30px;">
