--- a/pages/dashboards/tax_dashboards.html
+++ b/pages/dashboards/tax_dashboards.html
@@ -396,6 +396,98 @@
             border: 3px solid #c62828;
         }
 
+        /* Summary Section Styles */
+        .summary-section {
+            background: white;
+            border-radius: 12px;
+            padding: 30px;
+            margin-bottom: 30px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+            border-left: 5px solid #2e7d32;
+        }
+
+        .summary-title {
+            font-size: 1.4em;
+            color: #1B5E20;
+            margin-bottom: 15px;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .summary-content {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+
+        .summary-stat {
+            background: #f8faf9;
+            padding: 20px;
+            border-radius: 8px;
+            border-left: 4px solid #4CAF50;
+        }
+
+        .summary-stat.warning {
+            border-left-color: #FF9800;
+        }
+
+        .summary-stat.danger {
+            border-left-color: #f44336;
+        }
+
+        .stat-label {
+            font-size: 0.85em;
+            color: #666;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            margin-bottom: 8px;
+        }
+
+        .stat-value {
+            font-size: 2em;
+            font-weight: 700;
+            color: #1B5E20;
+            margin-bottom: 5px;
+        }
+
+        .stat-trend {
+            font-size: 0.9em;
+            color: #666;
+        }
+
+        .summary-text {
+            font-size: 1em;
+            line-height: 1.6;
+            color: #555;
+            padding: 15px;
+            background: #e8f5e9;
+            border-radius: 6px;
+        }
+
+        .trend-indicator {
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+            font-size: 0.85em;
+            font-weight: 600;
+            margin-top: 5px;
+        }
+
+        .trend-indicator.improving {
+            color: #4CAF50;
+        }
+
+        .trend-indicator.declining {
+            color: #f44336;
+        }
+
+        .trend-indicator.stable {
+            color: #FF9800;
+        }
+
         @media (max-width: 1200px) {
             .header-content {
                 flex-direction: column;
@@ -448,6 +540,43 @@
         
         <div class="page-title">Real Time Dashboards for Tax Sector Reforms</div>
         <div class="page-subtitle">Select a dashboard to explore tax sector metrics and analytics</div>
+
+        <!-- Performance Summary -->
+        <div class="summary-section">
+            <div class="summary-title">
+                <span>📊</span>
+                <span>Overall Performance Summary</span>
+            </div>
+            <div class="summary-content">
+                <div class="summary-stat warning">
+                    <div class="stat-label">Tax-to-GDP Ratio</div>
+                    <div class="stat-value">8.8%</div>
+                    <div class="stat-trend">Current Period (Target: 10.0%)</div>
+                    <div class="trend-indicator improving">↑ Rising (up 0.3% from baseline)</div>
+                </div>
+                <div class="summary-stat danger">
+                    <div class="stat-label">Return Filers</div>
+                    <div class="stat-value">4.2M</div>
+                    <div class="stat-trend">End of October (Target: 5.5M)</div>
+                    <div class="trend-indicator improving">↑ Growing (up 1M from baseline)</div>
+                </div>
+                <div class="summary-stat warning">
+                    <div class="stat-label">Tax Expenditure</div>
+                    <div class="stat-value">3.8%</div>
+                    <div class="stat-trend">% of GDP</div>
+                    <div class="trend-indicator stable">→ Stable (needs reduction)</div>
+                </div>
+                <div class="summary-stat warning">
+                    <div class="stat-label">Direct Taxes</div>
+                    <div class="stat-value">38%</div>
+                    <div class="stat-trend">Share of Total (Target: 45%)</div>
+                    <div class="trend-indicator improving">↑ Increasing (up 2% from baseline)</div>
+                </div>
+            </div>
+            <div class="summary-text">
+                <strong>Status:</strong> Tax sector showing gradual improvement but pace insufficient to meet FY2027 targets. <strong>Positive trends:</strong> Tax-to-GDP ratio growing (+0.3%), return filers expanding (+31%), direct tax share improving (+2%). <strong>Challenges:</strong> Filer growth needs to accelerate (+30% more needed), tax expenditure remains high at 3.8% of GDP. Revenue mobilization reforms require intensification.
+            </div>
+        </div>
 
         <div class="legend">
             <div class="legend-title">Performance Status Legend</div>
